--- a/requirements.txt
+++ b/requirements.txt
@@ -87,7 +87,7 @@ langchain-text-splitters==0.3.7
 langdetect==1.0.9
 langsmith==0.3.18
 lazy_loader==0.4
-librosa==0.11.0
+librosa>=0.10.0
 llvmlite==0.44.0
 lxml==5.3.1
 markdown-it-py==3.0.0
@@ -107,7 +107,7 @@ nest-asyncio==1.6.0
 networkx==3.4.2
 nltk==3.9.1
 numba==0.61.0
-numpy==2.1.3
+numpy>=1.24.0
 oauthlib==3.2.2
 olefile==0.47
 ollama==0.4.7
@@ -178,7 +178,7 @@ six==1.17.0
 smmap==5.0.2
 sniffio==1.3.1
 sounddevice==0.5.1
-soundfile==0.13.1
+soundfile>=0.12.1
 soupsieve==2.6
 soxr==0.5.0.post1
 SQLAlchemy==2.0.39
@@ -187,20 +187,20 @@ standard-aifc==3.13.0
 standard-chunk==3.13.0
 standard-sunau==3.13.0
 starlette==0.46.1
-streamlit==1.43.2
+streamlit>=1.24.0
 sympy==1.13.1
 tenacity==9.0.0
 threadpoolctl==3.6.0
 tiktoken==0.9.0
 tokenizers==0.21.1
 toml==0.10.2
-torch==2.6.0
-torchaudio==2.6.0
+torch>=2.0.0
+torchaudio>=2.0.0
 torchvision==0.21.0
 tornado==6.4.2
-tqdm==4.67.1
+tqdm>=4.65.0
 traitlets==5.14.3
-transformers==4.49.0
+transformers>=4.30.0
 typer==0.15.2
 typing-inspect==0.9.0
 typing-inspection==0.4.0
