--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
-torch==2.0.1
-transformers==4.30.2
-torchaudio==2.0.1
-streamlit==1.24.0
-numpy==1.24.3
-librosa==0.10.0
-tqdm==4.65.0
-soundfile==0.12.1
-python-dotenv==1.0.0
-requests==2.31.0
+streamlit>=1.32.0
+torch>=2.2.0
+torchaudio>=2.2.0
+transformers>=4.37.0
+numpy>=1.24.0
+python-dotenv>=1.0.0
+langchain>=0.1.0
+langchain-openai>=0.0.5
+langchain-core>=0.1.0
+langchain-ollama>=0.0.1
+soundfile>=0.12.1
+librosa>=0.10.0
+ffmpeg-python>=0.2.0
